Mobile alignment issues fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1061,8 +1061,7 @@ th {
 
 * {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  -moz-box-sizing: border-box; }
 
 *:before,
 *:after {
@@ -1586,10 +1585,8 @@ pre code {
   .container {
     width: 1170px; } }
 .container-fluid {
-  padding-right: 15px;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto; }
+  padding-right: 15px; }
 
 .row {
   margin-right: -15px;
@@ -6462,6 +6459,23 @@ button.close {
 .visible-lg-inline,
 .visible-lg-inline-block {
   display: none !important; }
+@media (max-width: 990px) {
+  #speakersection #chiefguest {
+  margin: 0 auto;
+  }
+
+  #chiefguestname {
+    text-align: center;
+  }
+
+  .speaker-box{
+    margin: 0 auto;
+  }
+
+  .speakerdesignation {
+    text-align: center;
+  }
+}
 
 @media (max-width: 767px) {
   .visible-xs {
@@ -6773,8 +6787,8 @@ p {
   background: #f5f5f5; }
 
 #newsletter {
-  padding-bottom: 9vh;
-  text-align: center; }
+  padding-bottom: 9vh; 
+text-align: center;}
   #newsletter h2 {
     font-family: "Josefin Slab", serif;
     font-weight: lighter;
@@ -6814,7 +6828,7 @@ video#bgvid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(assets/video-bg.jpg) no-repeat;
+    background: url(../assets/video-bg.jpg) no-repeat;
     background-size: cover; 
 }
 #fourthcontainer {
